--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta http-equiv='content-type' content='text/html, charset=UTF-8' />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>LMS Stundenplan</title>
