--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html data-asset-path="/iserv" ontouchmove>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
